[tool.poetry]
name = "store-project"
version = "0.1.0"
description = ""
authors = ["Evgeny <ytrokinterteiment@gmail.com>"]
readme = "README.md"
packages = [{include = "store_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
